# wechat-qrcode-ncnn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-android-gradle.yml  ci-android.yml  ci-linux.yml  ci-macos.yml  ci-unity.yml  ci-windows.yml
android/: settings.gradle.kts
android-jni/: CMakeLists.txt  qrcode_jni.c
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/zzt_qrcode_java/: build.gradle.kts
android/zzt_qrcode_java/src/androidTest/java/xyz/zhuzeitou/qrcode/: ExampleInstrumentedTest.java
android/zzt_qrcode_java/src/main/java/xyz/zhuzeitou/qrcode/: NativeLib.java  QrcodeDetector.java  QrcodeResults.java
android/zzt_qrcode_java/src/test/java/xyz/zhuzeitou/qrcode/: ExampleUnitTest.java
android/zzt_qrcode_kotlin/: build.gradle.kts
android/zzt_qrcode_kotlin/src/androidTest/java/xyz/zhuzeitou/qrcode/: ExampleInstrumentedTest.kt
android/zzt_qrcode_kotlin/src/main/cpp/: CMakeLists.txt
android/zzt_qrcode_kotlin/src/main/java/xyz/zhuzeitou/qrcode/: NativeLib.kt  QrcodeDetector.kt  QrcodeResults.kt
android/zzt_qrcode_kotlin/src/test/java/xyz/zhuzeitou/qrcode/: ExampleUnitTest.kt
android/zzt_qrcode_native/: CMakeLists.txt
core/: CMakeLists.txt
core/include/zzt_qrcode/: qrcode.h
core/src/: handle.h  qrcode.cpp  qrcode_result.cpp  qrcode_result.h
core/src/wechat_qrcode/include/opencv2/: wechat_qrcode.hpp
core/src/wechat_qrcode/src/: decodermgr.cpp  decodermgr.hpp  wechat_qrcode.cpp
core/src/wechat_qrcode/src/detector/: align.cpp  align.hpp  detect.id.h  detect_opt.id.h  detect_opt.mem.h  ssd_detector.cpp  ssd_detector.hpp
core/src/wechat_qrcode/src/scale/: sr.id.h  sr.mem.h  sr_opt.id.h  sr_opt.mem.h  super_scale.cpp  super_scale.hpp
core/src/wechat_qrcode/src/zxing/common/: bytematrix.cpp
core/src/wechat_qrcode/src/zxing/common/binarizer/: adaptive_threshold_mean_binarizer.cpp  adaptive_threshold_mean_binarizer.hpp
core/src/wechat_qrcode/src/zxing/qrcode/: qrcode_reader.cpp
core/src/wechat_qrcode/src/zxing/qrcode/detector/: detector.cpp
tests/: CMakeLists.txt  main.cpp
unity/xyz.zhuzeitou.qrcode/: package.json
unity/xyz.zhuzeitou.qrcode/Runtime/: QrcodeDetector.cs  QrcodeResults.cs  ZZT.QRCode.asmdef
unity/xyz.zhuzeitou.qrcode/Runtime/Native/: Bridge.cs
